# mosquitto-oauth-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  mosquitto-example.conf
.github/workflows/: ci.yaml
src/: acl.c  auth.c  base64.c  base64.h  hashmap.c  hashmap.h  mosquitto_braid_plugin.c  mosquitto_oauth_plugin.c  mosquitto_oauth_plugin.h  oauth.c  oauth.h  session.c  sub_matches.c  utils.c  utils.h
